--- a/Likelion/first_sem_finalhw/hw/ericainfo/templates/map.html
+++ b/Likelion/first_sem_finalhw/hw/ericainfo/templates/map.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,9 +16,11 @@
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
             crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="{% static 'css/map.css' %}">
     <title>MAP</title>
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -27,17 +31,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-                <a class="nav-link" href="{% url 'index' %}">Main <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'index' %}">Main</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'map' %}">MAP</a>
+                <a class="nav-link" href="{% url 'map' %}">MAP<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="main_map">
-hi
+<div>
+    <img src="{% static 'img/map.jpg' %}">
 </div>
 
 </body>
